--- a/index.css
+++ b/index.css
@@ -1,8 +1,6 @@
 .google {
 	width: 250px;
 	height: 90px;
-
-	position: center;
 	margin-top: 120px;
 	padding-bottom: 60px;
 }
@@ -17,12 +15,12 @@
 
 .search-inner {
 	border: 0px solid black;
-	background-color: #ffffff;
+	background-color: #FFFFFF;
 	z-index: 1;
 	position: absolute;
-	width: 305px;
+	width: 330px;
 	height: 28px;
-	top: 283px;
+	top: 275px;
 	left: 405px;
 	
 }
@@ -32,6 +30,10 @@
 	height: 36px;
 	background-color: #F2F2F2;
 	border: 0px;
+	font-family: arial, sans-serif;
+	font-size: 13px;
+	font-weight: bold;
+	color: #757575;
 }
 
 .button2 {
@@ -40,6 +42,10 @@
 	background-color: #F2F2F2;
 	margin: 11px 4px;
 	border: 0px;
+	font-family: arial, sans-serif;
+	font-size: 13px;
+	font-weight: bold;
+	color: #757575;
 }
 
 
@@ -49,6 +55,11 @@ p {
 	font-size: small;
 }
 
+body {
+	margin: 0;
+	padding: 0;
+	
+}
 
 
 .top-nav {
@@ -93,9 +104,56 @@ p {
 	
 }
 
+
+
+.footer {
+	margin-top: 50px;
+	
+}
+
+
 .footer1 {
 	display: block;
-	background-color: red;
-	margin: 0;
+	background-color: #F2F2F2;
+	line-height: 40px;
+	text-align: left;
+	padding-left: 30px;
+	border-top: 1px solid #E4E4E4;
+	border-bottom: 1px solid #E4E4E4; 
+
+}
+
+.footer1 a {
+	text-decoration: none;
+	color: rgba(0,0,0,.54);
+	font-family: arial, sans-serif;
+}
+
+
+
+
+.botfooter {
+	background-color: #F2F2F2;
+	line-height: 40px;
+	
+
+}
+
+
+.botfootertext {
+	text-decoration: none;
+	padding-left: 30px;
+	font-size: 13px;
+	font-family: arial, sans-serif;
+	color: #666;
+}
+
+.botfootertext2 {
+	float: right;
+	text-decoration:none;
+	padding-right: 30px;
+	font-size: 13px;
+	font-family: arial, sans-serif;
+	color: #666;
 }
 
